<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image_line_tab"
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:background="@drawable/tabline" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="#006600"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/banner_title1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/banner_title1"
                 android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/banner_title2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/banner_title2"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
             >

            <TextView
                android:id="@+id/banner_title3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/banner_title3"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
          >

            <TextView
                android:id="@+id/banner_title4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/banner_title4"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>