<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/appbar"
        android:background="@color/black" />-->

    <RelativeLayout
        android:id="@+id/rl_about_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/imageContentDescription"
            android:src="@drawable/icon_logo" />

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/about_privacy_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:clickable="true"
            android:text="@string/about_privacy_terms" />
    </RelativeLayout>

    <WebView
        android:id="@+id/about_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </WebView>

</RelativeLayout>
