<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp">
        <ImageView
            android:id="@+id/iv_navigation_head_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pic_navigation_background"
            android:scaleType="centerCrop"/>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_guide_logo"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/nav_text_padding_left"
        android:paddingRight="@dimen/nav_text_padding_left"
        android:background="@color/white"
        android:orientation="vertical">
        <!--<TextView
            android:id="@+id/nav_home"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_text_height"
            android:gravity="center_vertical"
            android:text="@string/nav_text_home"
            android:textColor="@color/nav_text"
            android:textSize="@dimen/nav_text_size"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/icon_guide_home"
            android:drawablePadding="@dimen/nav_drawable_img_padding"
            />-->
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_text_height"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nav_chuanyue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/nav_text_chuanyue"
                android:textColor="@color/nav_text"
                android:textSize="@dimen/nav_text_size"
                android:drawableLeft="@drawable/icon_guide_time"
                android:drawablePadding="@dimen/nav_drawable_img_padding"/>
            <TextView
                android:id="@+id/tv_time_travel_num"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                />
        </LinearLayout>-->

        <TextView
            android:id="@+id/nav_share"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_text_height"
            android:gravity="center_vertical"
            android:text="@string/nav_text_share"
            android:textColor="@color/nav_text"
            android:textSize="@dimen/nav_text_size"
            android:drawableLeft="@drawable/icon_guide_share"
            android:drawablePadding="@dimen/nav_drawable_img_padding"/>
        <TextView
            android:id="@+id/nav_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_text_height"
            android:gravity="center_vertical"
            android:text="@string/nav_text_comment"
            android:textColor="@color/nav_text"
            android:textSize="@dimen/nav_text_size"
            android:drawableLeft="@drawable/icon_guide_reviews"
            android:drawablePadding="@dimen/nav_drawable_img_padding"/>
        <TextView
            android:id="@+id/nav_feedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_text_height"
            android:gravity="center_vertical"
            android:text="@string/nav_text_feedback"
            android:textColor="@color/nav_text"
            android:textSize="@dimen/nav_text_size"
            android:drawableLeft="@drawable/icon_guide_feedback"
            android:drawablePadding="@dimen/nav_drawable_img_padding"/>
        <TextView
            android:id="@+id/nav_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_text_height"
            android:gravity="center_vertical"
            android:text="@string/nav_text_about"
            android:textColor="@color/nav_text"
            android:textSize="@dimen/nav_text_size"
            android:drawableLeft="@drawable/icon_guide_about"
            android:drawablePadding="@dimen/nav_drawable_img_padding"/>
    </LinearLayout>
</LinearLayout>